# slashmail

./: .beads  .gitignore  .slashbot  Cargo.toml  libnull.rlib
.beads/: .beads-credential-key  metadata.json
src/: cli.rs  compress.rs  crypto.rs  ctl.rs  db.rs  error.rs  keystore.rs  lib.rs  main.rs  net.rs  types.rs  ui.rs
src/cli/: init.rs  mod.rs  output.rs  tests.rs
src/crypto/: ecdh.rs  encrypt.rs  encryption.rs  signing.rs
src/engine/: merkle.rs  mod.rs  topic_registry.rs
src/identity/: mod.rs
src/message/: codec.rs
src/net/: behaviour.rs  mod.rs  peer_exchange.rs  rr.rs  sync_rr.rs  transport.rs
src/storage/: config.rs  db.rs  mod.rs
src/swarm/: mod.rs
tests/: crypto_vectors.rs  e2e.rs  smoke_e2e.sh  two_peer.rs
